--- a/NEWS
+++ b/NEWS
@@ -446,7 +446,7 @@ BUGFIXES:
 435 ==> 155593 - add checkbox for disabling call to utime().
 436 ==> 179274 - "XMP" not underscored in settings dialog.
 437 ==> 131212 - digiKam does not adhere to the EXIF Actions settings.
-438 ==> 
+438 ==> 320156 - Settings don't have a default button.
 439 ==> 
 440 ==> 
 441 ==> 
