--- a/NEWS
+++ b/NEWS
@@ -470,7 +470,7 @@ BUGFIXES:
 459 ==> 133488 - make it possible to enlarge image in the 'comments and tags' dialog.
 460 ==> 177608 - Wrong button text to save image tags and caption.
 461 ==> 300304 - Legends do not appear in editor.
-462 ==> 
+462 ==> 382231 - First Run wizzard path.
 463 ==> 
 464 ==> 
 465 ==> 
