--- a/NEWS
+++ b/NEWS
@@ -599,24 +599,24 @@ BUGFIXES:
 588 ==> 132625 - Crashes while browsing images [backtrace].
 589 ==> 291536 - digiKam crashes when stopped.
 590 ==> 448988 - Non-OpenGL "Random" transitions aren't random per image.
-591 ==> 
-592 ==> 
-593 ==> 
-594 ==> 
-595 ==> 
-596 ==> 
-597 ==> 
-598 ==> 
-599 ==> 
-600 ==> 
-601 ==> 
-602 ==> 
-603 ==> 
-604 ==> 
-605 ==> 
-606 ==> 
-607 ==> 
-608 ==> 
+591 ==> 377117 - No Geolocation functionality anymore.
+592 ==> 354505 - Geolocations gone
+593 ==> 097736 - Download of photos from Mustek GSmart Mini Crashes on Connect.
+594 ==> 128803 - Image Editor crashes if I want to use a tool
+595 ==> 122510 - digiKam crashes after downloading images from the digital camera.
+596 ==> 296779 - digiKam crashed while zooming globe.
+597 ==> 254036 - digikam.org logo animation causes high CPU load in X server.
+598 ==> 127621 - CameraGUI crashes when i try to import pictures from a readonly directory.
+599 ==> 268302 - Images are Invisible.
+600 ==> 133211 - Media browse corrupted display.
+601 ==> 223855 - Crash at attempt to download images from camera.
+602 ==> 110491 - THE COMMAND LINE IS : [garbage removed].
+603 ==> 136987 - Crash while moving a folder.
+604 ==> 097783 - digiKam crashes after deleting pictures.
+605 ==> 123530 - Unable to retrieve file error message.
+606 ==> 120995 - digiKam complains about GNOME locale settings, even after correcting them.
+607 ==> 088316 - Can't compile adjustlevels plugin: No rule to make target `../../digikam/digikam/libdigikam.la'.
+608 ==> 305466 - digiKam ask for debug symbol packages, whereas these are installed.
 609 ==> 
 610 ==> 
 611 ==> 
