--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ digiKam 7.6.0 - Release date: 2022-xx-xx
 NEW FEATURES:
 
 General: Update Libraw to snapshoot 20220116.
+General: Use Qt5.15 LTS patches collection git repository from KDE to build AppImage Linux bundle (snapshot 2022-01-23).
+
 
 *****************************************************************************************************
 BUGFIXES:
@@ -617,7 +619,7 @@ BUGFIXES:
 606 ==> 120995 - digiKam complains about GNOME locale settings, even after correcting them.
 607 ==> 088316 - Can't compile adjustlevels plugin: No rule to make target `../../digikam/digikam/libdigikam.la'.
 608 ==> 305466 - digiKam ask for debug symbol packages, whereas these are installed.
-609 ==> 
+609 ==> 114417 - Use Qt5.15 LTS source code from KDE git collection patch repository to compile AppImage bundle.
 610 ==> 
 611 ==> 
 612 ==> 
