--- a/NEWS
+++ b/NEWS
@@ -641,16 +641,16 @@ BUGFIXES:
 628 ==> 276479 - Wish: add feature to copy/move image files from digikam to filemanager on non-kde desktop.
 629 ==> 139358 - Crash when closing digiKam [backtrace].
 630 ==> 285124 - digiKam crashed while playing with effects.
-631 ==> 
-632 ==> 
-633 ==> 
-634 ==> 
-635 ==> 
-636 ==> 
-637 ==> 
-638 ==> 
-639 ==> 
-640 ==> 
+631 ==> 263463 - 'Scan for new images' should work on just current folder.
+632 ==> 279948 - Let the user decide which Tag is the root of people tags.
+633 ==> 098447 - View selected transparent exif info tags on top of the image in the image viewer.
+634 ==> 118984 - let auto-zoom increase the size of small images.
+635 ==> 200041 - 100% zoom should be available everywhere.
+636 ==> 203843 - Improvements for the selection tool.
+637 ==> 112034 - Auto generatet album configurator.
+638 ==> 160298 - An ability to set permanent destination directory.
+639 ==> 166060 - Wish: auto-create sub-albums by MONTH (instead of date) when downloading from camera.
+640 ==> 124414 - Display only new pictures.
 641 ==> 
 642 ==> 
 643 ==> 
