Show message if there was no result from the query This also fixes a bug in the DNotificationWidget. It used startTimer() without QObject's killTimer(). Each startTimer() call creates a new timer and the timer event runs faster and faster. BUGS: 449078 FIXED-IN: 7.6.0

--- a/NEWS
+++ b/NEWS
@@ -673,7 +673,7 @@ BUGFIXES:
 660 ==> 310449 - No thumbnail preview.
 661 ==> 353674 - Operations requiring disk access are unreasonably slow.
 662 ==> 317180 - Import dialog: Capture feature unusable.
-663 ==> 
+663 ==> 449078 - No feedback on search status.
 664 ==> 
 665 ==> 
 666 ==> 
